--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,17 @@ body {
     background-color: #FFFFFF;
 }
 
+.page {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.footer {
+    margin-top: auto;
+}
+
 a {
     color: #1A1A1A;
     text-decoration: none;
@@ -128,8 +139,8 @@ a {
 .blog-post-card {
     width: 100%;
     height: 100%;
-
 }
+
 
 .blog-post-card__title {
     margin-bottom: 12px;
@@ -166,13 +177,89 @@ a {
 }
 
 .blog-column {
-    width: 592px;
-    height: 432px;
-    background-color: red;
+    width: 100%;
+    height: 100%;
 }
 
-.recent-news {
+.recent-news__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 32px;
+}
+
+.categories {
+    width: 100%;
+}
+
+a.post-badge {
+    font-size: 14px;
+    color: #6941C6;
+    padding: 2px 10px 2px 10px;
+    border-radius: 16px;
+    background-color: #F9F5FF;
+}
+
+a.post-badge:hover {
+    opacity: 80%;
+}
+
+.blog-post-card__categories {
+    margin-top: 24px;
+}
+
+.blog-column__wrapper {
+    opacity: 70%;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 32px;
+}
+
+.column__item {
+    width: 100%;
+    height: 100%;
+}
+
+.column__item .content-img {
+    width: 320px;
+    height: 200px;
+}
+
+.column__item .title {
+    font-size: 18px;
+}
+
+/* 
+.blog-column .blog-post-card .content-data {
+
+} */
+
+.blog-column .blog-post-card .blog-post-card__content {
+    display: grid;
+    grid-template: 1fr 1fr;
+    gap: 0px;
+}
+
+.blog-column {
+    background-color: rgb(213, 125, 253);
+}
+
+.content-data {
+    background-color: rgb(38, 226, 69);
+}
+.blog-post-card__image {
+    width: 100%;
+    display: block;
+  }
+
+
+
+
+
+/* Footer */
+.footer {
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: rebeccapurple;
 }
