--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ a {
 
 .subtile {
     font-size: 16px;
-    line-height: 16px;
+    line-height: 20px;
     
     color: #667085;
 }
@@ -203,12 +203,11 @@ a.post-badge:hover {
     opacity: 80%;
 }
 
-.blog-post-card__categories {
+.recent-news__wrapper .blog-post-card__categories {
     margin-top: 24px;
 }
 
 .blog-column__wrapper {
-    opacity: 70%;
     height: 100%;
     width: 100%;
     display: grid;
@@ -241,13 +240,6 @@ a.post-badge:hover {
     gap: 0px;
 }
 
-.blog-column {
-    background-color: rgb(213, 125, 253);
-}
-
-.content-data {
-    background-color: rgb(38, 226, 69);
-}
 .blog-post-card__image {
     width: 100%;
     display: block;
@@ -260,6 +252,77 @@ a.post-badge:hover {
 /* Footer */
 .footer {
     box-sizing: border-box;
-    padding: 20px;
-    background-color: rebeccapurple;
+    padding: 30px 112px 30px 112px;
+}
+
+.footer .menu-links {
+    display: flex;
+}
+
+.footer__items {
+    font-family: 'Inter';
+    font-size: 20px;
+    display: flex;
+}
+
+.footer .menu-links li {
+    margin-left: 14px;
+}
+
+
+/* Banner */
+
+.banner-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.banner-post__wrapper .blog-post-card__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
+}
+
+.banner-content__data {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+
+.banner-post__wrapper .subtitle {
+    margin-bottom: 24px;
+}
+
+
+
+.blog-post-card__categories {
+    margin-top: auto;
+}
+
+/* All news */
+.all-posts__cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 32px;
+}
+
+.post-card__img {
+    width: 100%;
+}
+.post-card__img img {
+    width: 100%;
+}
+
+.post-card__item .content-info {
+    margin-top: 32px;
+}
+
+.post-card__item .categories {
+    margin-top: 32px;
+}
+
+
+.subtile.aligned {
+    text-align: center;
 }
