--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -48,3 +48,36 @@
     }
 }
 
+
+
+/* .vertical-card
+
+@media (min-width: 576px) { /* sm */
+    .horizontal {
+    
+    }
+}
+
+@media (min-width: 768px) { /* md */
+    .horizontal {
+    
+    }
+}
+
+@media (min-width: 992px) { /* lg */
+    .horizontal {
+    
+    }
+}
+
+@media (min-width: 1200px) { /* xl */
+    .horizontal {
+    
+    }
+}
+
+@media (min-width: 1400px) { /* xxl */
+    .horizontal {
+    
+    }
+} */
