--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,6 @@ a {
 a.post-badge {
     font-size: 14px;
     color: #6941C6;
-    padding: 2px 10px 2px 10px;
     border-radius: 16px;
     background-color: #F9F5FF;
 }
@@ -295,16 +294,7 @@ a.post-badge:hover {
     font-weight: 700;
     border-bottom: 2px solid #000;
     transition: border-bottom 0.3s ease;
-}
-
-.horizontal-card {
-    max-width: 592px;
-    border: 0px;
-}
-
-.horizontal-card .card-body {
-    padding: 0 0 0 1.25rem;
-}
+}   
 
 .vertical-card {
     border: 0px;
@@ -335,11 +325,29 @@ a.post-badge:hover {
 }
 
 .carousel-item img {
-    width: 100%; /* Занимает 100% ширины родителя */
-    height: 300px; /* Задайте нужную высоту */
-    object-fit:fill; /* Сохраняет пропорции и обрезает, если необходимо */
+    width: 100%; 
+    height: 300px; 
+    object-fit:fill; 
 }
 
 .navbar {
     margin-bottom: 100px;
+}
+
+.content-author, .content-date {
+    color: #6941C6;
+}
+
+/* CARDS */
+.card img {
+    border-radius: 0%;
+}
+
+.card {
+    border-radius: 0%;
+    border: 0;
+}
+
+.card-body {
+    padding: 0;
 }
