--- a/styles/style.css
+++ b/styles/style.css
@@ -394,3 +394,31 @@ a.post-badge:hover {
 .accordion-content p {
     margin: 10px 0;
 }
+
+/* POP UP */
+ .popup {
+    display: none; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    z-index: 1000;
+
+    display: flex;
+    flex-direction: column;
+}
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+}
