Fixed GetElement errors

--- a/styles/darkmode-toggle.css
+++ b/styles/darkmode-toggle.css
@@ -107,3 +107,8 @@ body.dark-mode .header__title  {
 .footer.dark-mode span {
     color: #ffffff;
 }
+
+a.user__info.dark-mode {
+    background-color: none;
+    color: #ffffff;
+}
